fix alignment of elements

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,6 @@ html {
 }
 
 section {
-  display: flex;
   padding: 0 32px;
   justify-content: center;
   align-items: center;
@@ -64,7 +63,7 @@ li {
 
 header {
   display: flex;
-  width: 100%;
+  /*width: 100%;*/
   margin: auto 0;
 }
 
@@ -704,7 +703,7 @@ header .row {
     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
   position: relative;
   flex: 1;
-  height: 100vh;
+  /*height: 100vh;*/
   width: 100%;
 }
 
@@ -1190,30 +1189,39 @@ footer ul {
 /*Adding Responsiveness*/
 
 @media (max-width: 1280px) {
+
+  footer {
+    max-width: 1160px;
+    margin: auto 0;
+  }
+ 
   .container {
     max-width: 1160px;
     padding: 96px 0px;
     margin: auto 0;
   }
 
+  #landing .container,    
+  #quality .container,
+  #steps .container {
+    max-width: 1100px;
+  }
+
   .row {
     max-width: 1160px;
+    justify-content: center;
+    align-items: center;
   }
 
   .nav__row {
     max-width: 1160px;
-    padding: 0 48px;
+    justify-content: space-between;
   }
 
   #quality .row {
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-
-  footer {
-    max-width: 1160px;
-    margin: auto 0;
   }
 
   .quality__description {
@@ -1230,21 +1238,24 @@ footer ul {
   .steps__grid {
     width: 6rem;
     height: 6rem;
-    bottom: 120px;
+    bottom: -60px;
+    padding-right: 40px;
   }
 
   .steps__img--wrapper {
-    width: 60%;
+    width: 50%;
+    padding-right: 40px;
     /*max-width: 340px;*/
+    overflow: visible;
   }
 
   .steps__description {
     margin-right: 0;
   }
 
-  .plan {
-    max-width: 50%;
-  }
+  /*.plan {
+    max-width: 60%;
+  }*/
 
   #values .row {
     margin: auto 0;
@@ -1444,7 +1455,7 @@ footer ul {
   }*/
 
   .steps__grid {
-    bottom: 120px;
+    bottom: -50px;
     left: 50%;
     width: 5rem;
     height: 5rem;
@@ -1458,6 +1469,7 @@ footer ul {
     display: flex;
     flex-direction: column;
     align-items: center;
+    /*max-width: 420px;*/
   }
 
   .plan {
